feat: uri versioning with v1/v2, rename owners to clients, add UNKNOWN client type
